--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link de CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Link Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Allura|Pacifico|Satisfy" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+
     <title>Carta</title>
 </head>
 <body>
@@ -15,7 +19,10 @@
                     <div class="cover">
                         <span class="heart">&hearts;</span>
                     </div>
-                    <div class="paper">Felices dos años amor. <br>Gracias por amarme y cuidarme todos los días.</div>
+                    <div class="paper">
+                        <p>Feliz aniversario Cami.<br>Hace dos años mejorás todos mis días. Que sean muchos más.</p>
+                        <p class="firma">Te amo</p>
+                    </div>
                     <div class="letter"></div>
                     <img src="favicon.ico" class="heart1">
                     <img src="favicon.ico" class="heart2">
